# imogen

./: .gitignore  .travis.yml  README  README.md  build.sbt  index.html  todo.org
doc/: imogen.texi
etc/: imogen.el
problems/: min.json  misc.el  prop.json
project/: build.properties
sml/src/: TODO
sml/src/constr/: asd.sml  backend.fun  bug.sml  cunif.sml  index-test.fun  index.fun  index.sml  krd.sig  provers.sig  provers.sml  rule.sml  seq.sig  seq.sml
sml/src/linear/: entails.sml  formula.sml  frame.sig
sml/src/modal/: davies.sig  dfg.sml  entails.fun  export.sml  prover.sml  simpson.sml
sml/src/ordered/: formula.sig  formula.sml  sources.cm  sources.mlb  world.sig
sml/src/parse/: imogen.grm  sources.mlb
sml/src/prop/: sources.cm  test.sml
sml/src/shared/: backend.sig  cmd-show.fun  cmd-util.sig  cmd-util.sml  csubst.sml  ctx.sig  focus.sig  prover.sig  rel.sig  sources.mlb  sublabels.sig  subst-test.fun  sym.sig  transform.sml  unif.sig  unif.sml
sml/src/std/: basis.sml  bool.sig  counting.sml  debug.sig  debug.sml  deque.sml  either.sml  fun.sml  general.sig  hash-set.fun  hash-set.sig  hash-set.sml  int.sig  mlton-nj.sml  option.sml  ord-key.sig  ord-map.fun  os.sml  parsing.sig  pos.sig  pos.sml  pp.hs  pp.ml  pp.sml  pp.txt  printf.1.sig  printf.sig  re.sml  sources.1.cm  sources.mlb  textio.sml  time1.sml  timing-on.mlb  timing.sig  timing.sml  tokens.sig  type-class.sig  type-class.sml  univ.sig  univ.sml  (+3 more)
sml/src/top/: test.sml
src/constr/: ard.sig  asd.sig  cunif.sig  index.sig  krd.sml  pdb.sml  sources.cm  term-index-test.fun  term-index.sig  test.sml  unif-test.fun
src/fol/: NOTES  sources.mlb  test.sml
src/fol/cascade/: bug.sml  export.sml  proof.sig  proof.sml  prover.sml  rindex.sml  rseq.sml  rule.sig  sources.mlb  test.sml
src/linear/: entails.new.sml  entails.sig  frame.sml  sources.cm  world.sml
src/main/haskell/imogen/: Imogen.cabal
src/main/haskell/imogen/notes/: TODO  tunify.pl
src/main/haskell/imogen/notes/old/: focus  modal
src/main/haskell/imogen/src/: Main.hs
src/main/haskell/imogen/src/imogen/: Ants.hs  Class.hs  Cons.hs  Formula.hs  PFormula.hs  Path.hs  Pred.hs  Proof.hs  Seq.hs  Subst.hs  Term.hs  Unif.hs  Uninterp.hs
src/main/haskell/imogen/src/imogen/Constr/: Atp.hs  Dlo.hs
src/main/haskell/imogen/src/imogen/Database/: KRD.hs
src/main/haskell/imogen/src/imogen/Linear/: LL.hs  Translate.hs
src/main/haskell/imogen/src/imogen/Util/: Counter.hs  Debug.hs  Fresh.hs  Impossible.hs  List.hs  Pair.hs  Print.hs  Test.hs  Three.hs
src/main/haskell/imogen/src/imogen/Util/Log/: Class.lhs
src/main/haskell/imogen/src/imogen/Util/Test/: Text.lhs
src/main/haskell/imogen/src/imogen/test/: OrdWorld.hs  Ordered.hs  Seq.hs  TString.hs  Unif.hs
src/main/haskell/imogen/src/imogen/test/Examples/: dlo1.imo
src/modal/: entails.sml  logic.sml
src/ordered/: export.sml  frame.sig
src/parse/: imogen.lex  interface.sml  sources.1.cm  test.sml
src/prop/: export.sml  sources.mlb
src/shared/: cmd-prove.fun  conflicts.sig  domain.sig  export.sml  focus.sml  fragment.sig  fragment.sml  prover.fun  signat.sml  sources.cm  state.sml  sublabels.sml  term.sig  term.sml  test.sml  transform.sig  util.sig
src/std/: array.sig  array1.sml  base.sml  basis1.sml  bool.sml  clock.sml  command.sig  command.sml  dlist.sig  dlist.sml  fifo.sig  hash-table.sig  heap.fun  heap.sig  lazy.sig  lazy.sml  list.sig  list1.sml  log.sml  mlton.sig  mlton.sml  option.sig  ord-map.sig  ord-set.fun  order.sml  pp.sig  real1.sml  result.sml  sources.cm  string.sig  string1.sml  string2.sml  time.sig  timing-off.mlb  timing-off.sml  tokens.sml  unit-test.sig  with-return.sml  word1.sml
src/top/: cmd-fol.sml  cmd-linear.sml  cmd-modal.sml  cmd-ordered.sml  cmd.sml  run-mlton.sml
tests/: common.sh
tests/fol/: runtests
tests/prop/: runtests
(+3505 files in other folders)
